cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_25434_positive6.json
{
  "Resources": {
    "LoadBalancer01": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "SecurityGroups": [
          { "Ref": "DualStackSecurityGroup" }
        ]
      }
    },
    "DualStackSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security group for IPv4 and IPv6 ingress rules",
        "VpcId": { "Ref": "MyVPC" }
      }
    },
    "IPv4Ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "DualStackSecurityGroup" },
        "IpProtocol": "17",
        "FromPort": 137,
        "ToPort": 137,
        "CidrIp": "10.0.0.0/0"
      }
    },
    "IPv4Ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "DualStackSecurityGroup" },
        "IpProtocol": "tcp",
        "FromPort": 22,
        "ToPort": 22,
        "CidrIp": "192.168.0.0/0"
      }
    },
    "IPv4Ingress3": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "DualStackSecurityGroup" },
        "IpProtocol": "udp",
        "FromPort": 137,
        "ToPort": 137,
        "CidrIp": "172.16.0.0/0"
      }
    },
    "IPv4Ingress4": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "DualStackSecurityGroup" },
        "IpProtocol": "udp",
        "FromPort": 138,
        "ToPort": 138,
        "CidrIp": "172.16.0.0/0"
      }
    },
    "IPv6Ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "DualStackSecurityGroup" },
        "IpProtocol": "6",
        "FromPort": 22,
        "ToPort": 22,
        "CidrIpv6": "fd00::/0"
      }
    },
    "IPv6Ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "DualStackSecurityGroup" },
        "IpProtocol": "tcp",
        "FromPort": 22,
        "ToPort": 22,
        "CidrIpv6": "fd12:3456:789a::1/0"
      }
    },
    "IPv6Ingress3": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "DualStackSecurityGroup" },
        "IpProtocol": "udp",
        "FromPort": 137,
        "ToPort": 137,
        "CidrIpv6": "fd00:abcd:1234::42/0"
      }
    },
    "IPv6Ingress4": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "DualStackSecurityGroup" },
        "IpProtocol": "udp",
        "FromPort": 138,
        "ToPort": 138,
        "CidrIpv6": "fd00:abcd:1234::42/0"
      }
    }
  }
}
